# bluefish

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  modules.json
.github/workflows/: release.yml
Bluefish444/: .nospub  Bluefish444.noscfg  CMakeLists.txt
Bluefish444/Config/: BluefishNodes.nosdef  BluefishTypes.fbs  InputNode.nosdef  OutputNode.nosdef
Bluefish444/Source/: BluefishCommon.hpp  BluefishTypes_generated.h  ChannelHelpers.hpp  ChannelNode.cpp  ChannelNode.hpp  DMANodeBase.hpp  DMAReadNode.cpp  DMAWriteNode.cpp  Device.cpp  Device.hpp  InputNode.cpp  OutputNode.cpp  PluginMain.cpp  WaitVBLNode.cpp
CMake/: GenerateFlatBuffers.cmake
